styles-quiz.css
body{
  background-color: rgb(226, 255, 183);
  font-family: "Karla";
}

#quiz-container{
  max-width: 400px;
  margin:auto;
  padding:20px;
  text-align: center;
}

legend {
  text-align: left;
}

fieldset {
  background-color: aliceblue;
  box-shadow: rgba(0, 0, 0, 0.2) 3px 3px 3px 1px;
  border: none;
  /* display:none; */
  /* opacity:0.2; */
}

/* fieldset:not(:active) {
  color:red;
} */

/* fieldset .active {
    opacity:0.8;
  }  */

  /* .question-div .active{
    opacity:0.8;
  } */



.popup-div{
  position:fixed;
  display: flex;
  flex-direction: column;
  
  text-align: center;
  color: #fff;
  background-color: rgba(128, 128, 128, 0.364);
}

